--- a/slide9.html
+++ b/slide9.html
@@ -777,7 +777,7 @@
                             Academic Authority & Credibility
                         </div>
                         <div class="category-description">
-                            <span class="clickable" onclick="showSource('authority')">Professor-inventor academic backing</span> provides powerful credibility for practitioner adoption and conversion
+                            <span class="clickable" onclick="showSource('authority')">Professor-inventor backing</span> provides credibility for practitioner adoption
                         </div>
                         <div class="category-value">Enhanced practitioner confidence and trust</div>
                     </div>
@@ -788,7 +788,7 @@
                             Professional Network Access
                         </div>
                         <div class="category-description">
-                            <span class="clickable" onclick="showSource('network')">OSU dental alumni network</span> creates systematic early adoption pathway and testimonial generation
+                            <span class="clickable" onclick="showSource('network')">OSU dental alumni network</span> creates early adoption pathway and testimonials
                         </div>
                         <div class="category-value">Direct access to influential dental practitioners</div>
                     </div>
@@ -799,7 +799,7 @@
                             Research Network Collaboration
                         </div>
                         <div class="category-description">
-                            <span class="clickable" onclick="showSource('collaboration')">Multi-university research partnerships</span> through OSU connections expand validation opportunities
+                            <span class="clickable" onclick="showSource('collaboration')">Multi-university partnerships</span> expand validation opportunities
                         </div>
                         <div class="category-value">Broader academic validation through network effects</div>
                     </div>
@@ -830,34 +830,34 @@
                     <div class="benefit-category">
                         <div class="category-title">
                             <span class="category-icon">🏆</span>
-                            Global Manufacturing Leadership
+                            Global Manufacturing Ecosystem
                         </div>
                         <div class="category-description">
-                            <span class="clickable" onclick="showSource('quality')">World's 4th largest implant manufacturer ecosystem</span> - Korean companies dominate global value segment with proven excellence
+                            <span class="clickable" onclick="showSource('quality')">World-class manufacturing hub</span> with multiple top-tier companies
                         </div>
-                        <div class="category-value">Osstem: World's best-selling implant since 2017</div>
+                        <div class="category-value">Rich ecosystem for KiiS partnership opportunities</div>
                     </div>
                     
                     <div class="benefit-category">
                         <div class="category-title">
                             <span class="category-icon">⚡</span>
-                            Competitive Cost Structure
+                            Value Manufacturing Model
                         </div>
                         <div class="category-description">
-                            <span class="clickable" onclick="showSource('cost')">Korean value-focused manufacturing model</span> enables premium quality at competitive pricing vs traditional premium brands
+                            <span class="clickable" onclick="showSource('cost')">Proven value-focused approach</span> with competitive economics
                         </div>
-                        <div class="category-value">Target: Competitive pricing with Swiss-level quality</div>
+                        <div class="category-value">Swiss-level quality with competitive economics</div>
                     </div>
                     
                     <div class="benefit-category">
                         <div class="category-title">
                             <span class="category-icon">🏭</span>
-                            Proven Scale & Innovation
+                            Strategic Partnership Access
                         </div>
                         <div class="category-description">
-                            <span class="clickable" onclick="showSource('scale')">Established high-volume production infrastructure</span> with 3,000+ SKU capability and global export track record
+                            <span class="clickable" onclick="showSource('scale')">Multiple qualified OEM partners</span> with flexible capabilities
                         </div>
-                        <div class="category-value">Proven capacity for large-scale international markets</div>
+                        <div class="category-value">KiiS can select optimal manufacturing partner</div>
                     </div>
                 </div>
             </div>
@@ -875,7 +875,7 @@
                     <div class="advantage-icon">🎯</div>
                     <div class="advantage-title">Nobel Biocare Compatibility</div>
                     <div class="advantage-description">
-                        <span class="clickable" onclick="showSource('nobel')">Strategic compatibility with Nobel's highest volume SKUs</span> - seamless practice integration
+                        <span class="clickable" onclick="showSource('nobel')">Strategic compatibility with Nobel's high-volume SKUs</span> - seamless integration
                     </div>
                     <div class="advantage-metric">Target: 70%+ market coverage with focused SKUs</div>
                 </div>
@@ -884,7 +884,7 @@
                     <div class="advantage-icon">⚡</div>
                     <div class="advantage-title">Zero Learning Curve</div>
                     <div class="advantage-description">
-                        <span class="clickable" onclick="showSource('learning')">Identical surgical protocols</span> - immediate adoption by existing practitioners
+                        <span class="clickable" onclick="showSource('learning')">Identical surgical protocols</span> - immediate practitioner adoption
                     </div>
                     <div class="advantage-metric">Day 1 implementation ready</div>
                 </div>
@@ -893,7 +893,7 @@
                     <div class="advantage-icon">📊</div>
                     <div class="advantage-title">Production Efficiency</div>
                     <div class="advantage-description">
-                        <span class="clickable" onclick="showSource('efficiency')">Focused SKU strategy</span> maximizes Korean manufacturing scale advantages
+                        <span class="clickable" onclick="showSource('efficiency')">Focused SKU strategy</span> maximizes manufacturing efficiency
                     </div>
                     <div class="advantage-metric">Strategic focus: Core SKUs handle majority volume</div>
                 </div>
@@ -961,16 +961,16 @@
                 content: '<p><strong>Expanded Research Partnerships:</strong></p><p>OSU connections enable collaboration with other universities for broader academic validation while managing conflict of interest considerations.</p><p><strong>Network Collaboration Model:</strong></p><ul><li><strong>Multi-University Studies:</strong> OSU facilitates connections with other dental schools for independent research</li><li><strong>Academic Partnerships:</strong> Collaborative research projects with universities having no financial stake</li><li><strong>Research Coordination:</strong> OSU professor expertise guides research design at partner institutions</li><li><strong>Publication Strategy:</strong> Multi-site studies provide stronger academic validation</li></ul><p><strong>COI Management:</strong></p><ul><li><strong>Independent Research:</strong> Partner universities conduct studies without OSU direct involvement</li><li><strong>Transparent Disclosure:</strong> Full disclosure of OSU equity stake in all academic interactions</li><li><strong>Third-Party Validation:</strong> Independent university research eliminates bias concerns</li><li><strong>Academic Integrity:</strong> Maintain highest standards of research independence and transparency</li></ul><p><strong>Strategic Value:</strong> Academic network effects provide broader validation while maintaining research integrity and transparency.</p>'
             },
             'quality': {
-                title: 'Korean Dental Manufacturing Global Leadership',
-                content: '<p><strong>World-Class Manufacturing Ecosystem:</strong></p><p>Korea hosts the world\'s 4th largest dental implant manufacturer (Osstem) and multiple top-tier companies, creating a sophisticated manufacturing ecosystem with proven global success.</p><p><strong>Global Market Leadership:</strong></p><ul><li><strong>Osstem Implant:</strong> World\'s best-selling implant since 2017, global market leader</li><li><strong>Market Dominance:</strong> Korean brands hold 75% of domestic market with 40% (Osstem), 21% (Dentium), 14% (Neobiotech)</li><li><strong>Export Excellence:</strong> Established presence in 60+ countries worldwide</li><li><strong>Production Scale:</strong> 3,000+ implant and abutment variations available</li></ul><p><strong>Manufacturing Excellence:</strong></p><ul><li><strong>Quality Standards:</strong> ISO 13485, FDA registration, CE compliance across major manufacturers</li><li><strong>Innovation Focus:</strong> Continuous R&D investment with university and government partnerships</li><li><strong>Cost Leadership:</strong> Value-focused model delivering premium quality at competitive pricing</li><li><strong>Supply Chain Maturity:</strong> Established titanium sourcing and component ecosystem</li></ul><p><strong>Strategic Advantage:</strong> Access to proven global-scale manufacturing with established quality systems and competitive cost structure.</p>'
+                title: 'Korean Dental Manufacturing Ecosystem',
+                content: '<p><strong>World-Class Manufacturing Hub:</strong></p><p>Korea has developed into a sophisticated dental implant manufacturing ecosystem with multiple world-class companies, creating ideal conditions for KiiS partnership opportunities.</p><p><strong>Ecosystem Advantages:</strong></p><ul><li><strong>Market Leadership:</strong> Korean companies hold significant global market positions in dental implants</li><li><strong>Multiple Players:</strong> Diverse range of manufacturers with different specializations and capabilities</li><li><strong>Export Excellence:</strong> Established presence in 60+ countries worldwide</li><li><strong>Innovation Focus:</strong> Continuous R&D investment with university and government support</li></ul><p><strong>Quality Standards:</strong></p><ul><li><strong>International Compliance:</strong> ISO 13485, FDA registration, CE compliance across major manufacturers</li><li><strong>Proven Track Record:</strong> Years of successful international partnerships and exports</li><li><strong>Supply Chain Maturity:</strong> Established titanium sourcing and component ecosystem</li><li><strong>Technology Transfer:</strong> Proven ability to work with international partners</li></ul><p><strong>KiiS Strategic Advantage:</strong> Rich ecosystem provides multiple partnership options, allowing KiiS to select optimal manufacturing partner based on specific requirements and capabilities.</p>'
             },
             'cost': {
                 title: 'Korean Value Manufacturing Model',
-                content: '<p><strong>Competitive Market Positioning:</strong></p><p>Korean manufacturers have proven the value model - delivering premium quality at competitive pricing through operational excellence rather than premium brand positioning.</p><p><strong>Market Success Examples:</strong></p><ul><li><strong>Osstem Strategy:</strong> World\'s best-selling implant through competitive pricing with proven quality</li><li><strong>Value Positioning:</strong> Korean brands typically 20-30% below Swiss premium pricing</li><li><strong>Quality Maintenance:</strong> Same materials and standards as premium brands</li><li><strong>Volume Economics:</strong> High-volume production enables cost efficiency</li></ul><p><strong>Cost Structure Advantages:</strong></p><ul><li><strong>Operational Efficiency:</strong> Streamlined manufacturing processes and supply chains</li><li><strong>Scale Benefits:</strong> Large domestic market provides volume foundation</li><li><strong>R&D Efficiency:</strong> Focus on practical innovation vs pure research</li><li><strong>Market Positioning:</strong> Value-conscious approach enables competitive pricing</li></ul><p><strong>Strategic Pricing:</strong> KiiS can leverage Korean manufacturing to offer compelling value proposition while maintaining healthy margins and premium quality standards.</p>'
+                content: '<p><strong>Proven Value Approach:</strong></p><p>Korean manufacturers have successfully demonstrated the value model - delivering premium quality at competitive pricing through operational excellence and innovation rather than premium brand positioning.</p><p><strong>Market Success Indicators:</strong></p><ul><li><strong>Global Recognition:</strong> Korean implants widely adopted in international markets</li><li><strong>Value Positioning:</strong> Competitive pricing with maintained quality standards</li><li><strong>Quality Maintenance:</strong> Same materials and manufacturing standards as premium brands</li><li><strong>Volume Economics:</strong> High-volume production enables cost efficiency</li></ul><p><strong>Cost Structure Benefits:</strong></p><ul><li><strong>Operational Efficiency:</strong> Streamlined manufacturing processes and supply chains</li><li><strong>Scale Advantages:</strong> Large domestic market provides volume foundation for efficiency</li><li><strong>Innovation Focus:</strong> Practical innovation focused on real-world clinical needs</li><li><strong>Competitive Ecosystem:</strong> Multiple manufacturers create competitive pricing environment</li></ul><p><strong>KiiS Strategic Benefit:</strong> Access to this proven value manufacturing model enables KiiS to offer compelling value proposition while maintaining healthy margins and premium quality standards.</p>'
             },
             'scale': {
-                title: 'Proven Production Scale & Infrastructure',
-                content: '<p><strong>Established Global Manufacturing:</strong></p><p>Korean dental manufacturers operate at significant scale with proven ability to serve global markets and adapt to volume requirements.</p><p><strong>Scale Indicators:</strong></p><ul><li><strong>Product Range:</strong> Osstem offers 3,000+ implant and abutment configurations</li><li><strong>Global Reach:</strong> Korean manufacturers export to 60+ countries worldwide</li><li><strong>Market Position:</strong> Osstem holds world\'s highest implant sales volume since 2017</li><li><strong>Domestic Foundation:</strong> Strong $435M domestic market provides scale foundation</li></ul><p><strong>Infrastructure Capabilities:</strong></p><ul><li><strong>Flexible Production:</strong> Proven ability to scale volumes based on market demand</li><li><strong>Quality Systems:</strong> Scalable QC processes maintaining standards at high volume</li><li><strong>Supply Chain:</strong> Established relationships with titanium and component suppliers</li><li><strong>Export Logistics:</strong> Proven international distribution and regulatory compliance</li></ul><p><strong>Strategic Advantage:</strong> Access to mature, high-volume manufacturing infrastructure with demonstrated ability to serve international markets and scale production efficiently.</p>'
+                title: 'Strategic Partnership Opportunities',
+                content: '<p><strong>Rich Manufacturing Ecosystem:</strong></p><p>Korea\'s mature dental manufacturing ecosystem provides KiiS with multiple qualified OEM partners, each with different strengths and capabilities for optimal strategic fit.</p><p><strong>Partnership Advantages:</strong></p><ul><li><strong>Multiple Options:</strong> Diverse range of manufacturers with different specializations</li><li><strong>Proven Capabilities:</strong> Established track record in international partnerships</li><li><strong>Flexible Production:</strong> Ability to accommodate different volume requirements and specifications</li><li><strong>Technology Integration:</strong> Experience working with international companies and technologies</li></ul><p><strong>Manufacturing Infrastructure:</strong></p><ul><li><strong>Quality Systems:</strong> Established QC processes and international certifications</li><li><strong>Supply Chain:</strong> Mature relationships with titanium and component suppliers</li><li><strong>Export Experience:</strong> Proven international distribution and regulatory compliance</li><li><strong>Scalability:</strong> Infrastructure capable of supporting growth from startup to high volume</li></ul><p><strong>KiiS Strategic Benefit:</strong> This rich ecosystem allows KiiS to carefully select manufacturing partners based on specific needs, quality requirements, and strategic fit, rather than being limited to single-source relationships.</p>'
             },
             'nobel': {
                 title: 'Strategic SKU Compatibility with Market Leaders',
