--- a/slide9.html
+++ b/slide9.html
@@ -873,29 +873,29 @@
             <div class="sku-grid">
                 <div class="sku-advantage">
                     <div class="advantage-icon">🎯</div>
-                    <div class="advantage-title">Nobel Biocare Compatibility</div>
+                    <div class="advantage-title">Strategic SKU Efficiency</div>
                     <div class="advantage-description">
-                        <span class="clickable" onclick="showSource('nobel')">Strategic compatibility with Nobel's high-volume SKUs</span> - seamless integration
+                        <span class="clickable" onclick="showSource('nobel')">KiiS 3-diameter strategy</span> covers major market segments with minimal SKU count
                     </div>
-                    <div class="advantage-metric">Target: 70%+ market coverage with focused SKUs</div>
+                    <div class="advantage-metric">Strategic focus on core sizes</div>
                 </div>
                 
                 <div class="sku-advantage">
                     <div class="advantage-icon">⚡</div>
-                    <div class="advantage-title">Zero Learning Curve</div>
+                    <div class="advantage-title">Direct Compatibility</div>
                     <div class="advantage-description">
-                        <span class="clickable" onclick="showSource('learning')">Identical surgical protocols</span> - immediate practitioner adoption
+                        <span class="clickable" onclick="showSource('learning')">Universal connection system</span> - works with existing Nobel components
                     </div>
-                    <div class="advantage-metric">Day 1 implementation ready</div>
+                    <div class="advantage-metric">Plug-and-play integration</div>
                 </div>
                 
                 <div class="sku-advantage">
                     <div class="advantage-icon">📊</div>
-                    <div class="advantage-title">Production Efficiency</div>
+                    <div class="advantage-title">Manufacturing Efficiency</div>
                     <div class="advantage-description">
-                        <span class="clickable" onclick="showSource('efficiency')">Focused SKU strategy</span> maximizes manufacturing efficiency
+                        <span class="clickable" onclick="showSource('efficiency')">Single system approach</span> - shared tooling across all diameters
                     </div>
-                    <div class="advantage-metric">Strategic focus: Core SKUs handle majority volume</div>
+                    <div class="advantage-metric">Optimized production economics</div>
                 </div>
             </div>
         </div>
@@ -973,12 +973,12 @@
                 content: '<p><strong>Rich Manufacturing Ecosystem:</strong></p><p>Korea\'s mature dental manufacturing ecosystem provides KiiS with multiple qualified OEM partners, each with different strengths and capabilities for optimal strategic fit.</p><p><strong>Partnership Advantages:</strong></p><ul><li><strong>Multiple Options:</strong> Diverse range of manufacturers with different specializations</li><li><strong>Proven Capabilities:</strong> Established track record in international partnerships</li><li><strong>Flexible Production:</strong> Ability to accommodate different volume requirements and specifications</li><li><strong>Technology Integration:</strong> Experience working with international companies and technologies</li></ul><p><strong>Manufacturing Infrastructure:</strong></p><ul><li><strong>Quality Systems:</strong> Established QC processes and international certifications</li><li><strong>Supply Chain:</strong> Mature relationships with titanium and component suppliers</li><li><strong>Export Experience:</strong> Proven international distribution and regulatory compliance</li><li><strong>Scalability:</strong> Infrastructure capable of supporting growth from startup to high volume</li></ul><p><strong>KiiS Strategic Benefit:</strong> This rich ecosystem allows KiiS to carefully select manufacturing partners based on specific needs, quality requirements, and strategic fit, rather than being limited to single-source relationships.</p>'
             },
             'nobel': {
-                title: 'Strategic SKU Compatibility with Market Leaders',
-                content: '<p><strong>Strategic Market Penetration:</strong></p><p>Strategic compatibility with market-leading products enables seamless practice integration and accelerated market penetration.</p><p><strong>Compatibility Strategy:</strong></p><ul><li><strong>Market Analysis:</strong> Research of highest volume competitor SKUs</li><li><strong>Strategic Selection:</strong> Focus on most commonly used sizes and configurations</li><li><strong>Practice Integration:</strong> Minimal disruption to existing workflows</li><li><strong>Market Coverage Goal:</strong> Target majority market coverage with focused SKU selection</li></ul><p><strong>Practice Integration Benefits:</strong></p><ul><li><strong>Minimal Changes:</strong> Same storage and handling procedures</li><li><strong>Familiar Protocols:</strong> No new instrument purchases required</li><li><strong>Compatible Systems:</strong> Existing prosthetic platform compatibility</li><li><strong>Proven Approach:</strong> Same surgical techniques and patient selection</li></ul><p><strong>Market Strategy:</strong> Focused approach maximizes production efficiency while targeting significant market share through strategic compatibility.</p>'
+                title: 'KiiS Strategic Size Approach',
+                content: '<p><strong>Efficient Coverage Strategy:</strong></p><p>KiiS has designed a highly efficient 3-diameter strategy that focuses on the most commonly used sizes in clinical practice, optimizing both manufacturing efficiency and broad market applicability.</p><p><strong>KiiS Size Strategy:</strong></p><ul><li><strong>3 Core Sizes:</strong> 3.5mm, 4.3mm, 5.0mm cover the most common clinical needs</li><li><strong>Multiple Lengths:</strong> 8, 10, 11.5, 13, 16mm options for optimal fit</li><li><strong>Single System:</strong> Same surgical approach across all sizes</li><li><strong>Universal Connection:</strong> Compatible with major industry systems</li></ul><p><strong>Clinical Applications:</strong></p><ul><li><strong>3.5mm:</strong> Narrow spaces and front teeth applications</li><li><strong>4.3mm:</strong> Most common size for general applications</li><li><strong>5.0mm:</strong> Back teeth and wider spaces</li><li><strong>Strategic Focus:</strong> These sizes address the majority of typical clinical scenarios</li></ul><p><strong>Competitive Advantage:</strong> While competitors may offer many more size variations, KiiS achieves broad clinical applicability with focused efficiency, enabling superior manufacturing economics and simplified inventory management.</p>'
             },
             'learning': {
-                title: 'Practice Integration Strategy',
-                content: '<p><strong>Seamless Practice Adoption:</strong></p><p>Compatible surgical protocols enable immediate adoption by existing practitioners with minimal additional training or equipment investment required.</p><p><strong>Protocol Compatibility:</strong></p><ul><li><strong>Drilling Sequence:</strong> Familiar drill progression and preparation methods</li><li><strong>Insertion Technique:</strong> Compatible surgical approach and placement methodology</li><li><strong>Standard Procedures:</strong> Familiar insertion torque and clinical protocols</li><li><strong>Healing Protocols:</strong> Standard osseointegration and loading timelines</li></ul><p><strong>Practice Efficiency Benefits:</strong></p><ul><li><strong>Minimal Training:</strong> Surgical teams use familiar procedures</li><li><strong>Equipment Compatibility:</strong> Same surgical kits and instrumentation</li><li><strong>Workflow Continuity:</strong> Compatible case planning and execution</li><li><strong>Immediate Value:</strong> Cost benefits begin with first implementation</li></ul><p><strong>Adoption Strategy:</strong> Removing barriers enables faster market penetration and practitioner confidence in transitioning to KiiS products.</p>'
+                title: 'Direct System Compatibility',
+                content: '<p><strong>Universal Connection Standard:</strong></p><p>KiiS utilizes industry-standard connection systems, providing direct compatibility with major implant systems and enabling seamless integration into existing dental practices.</p><p><strong>Compatibility Features:</strong></p><ul><li><strong>Standard Connection:</strong> Works with existing Nobel system components</li><li><strong>Same Surgical Tools:</strong> Uses familiar drilling and placement techniques</li><li><strong>Existing Components:</strong> Compatible with current crown and bridge systems</li><li><strong>Proven Protocol:</strong> Same placement procedure and healing timeline</li></ul><p><strong>Practice Integration Benefits:</strong></p><ul><li><strong>No Retraining:</strong> Dentists use familiar procedures</li><li><strong>Current Inventory:</strong> Works with existing crown and bridge components</li><li><strong>Same Tools:</strong> No additional surgical equipment needed</li><li><strong>Immediate Use:</strong> Drop-in replacement capability</li></ul><p><strong>FDA Validation:</strong> KiiS and Nobel systems approved under the same FDA standards, confirming technical compatibility and regulatory alignment for seamless clinical implementation.</p>'
             },
             'efficiency': {
                 title: 'Production Efficiency Through Strategic Focus',
