--- a/slide12.html
+++ b/slide12.html
@@ -631,7 +631,7 @@
                 Investment <span class="title-highlight">Highlights</span>
             </h1>
             <p class="subtitle">
-                Why KiiS is the Smart Investment Choice: Risk-Mitigated MedTech Opportunity
+                178M Patients Deserve One More Chance. We have the technology, team, and unwavering conviction to be that chance. This is why KiiS exists.
             </p>
         </div>
 
@@ -653,13 +653,13 @@
                         <div class="stat-label">Development<br>Timeline</div>
                     </div>
                 </div>
-                <div class="but-text">But KiiS Has Solved Every Major Risk Factor</div>
+                <div class="but-text">We Won't Let Them Down. Every Risk Factor = Solved.</div>
                 <div class="data-source" onclick="alert('Sources: MedTech Breakthrough Report 2024, CB Insights Healthcare Analysis, FDA Economic Impact Analysis 2024')">ℹ️ Sources</div>
             </div>
 
             <!-- 대비 분석 섹션 -->
             <div class="comparison-section">
-                <div class="section-title">Why Most MedTech Startups Fail vs How KiiS Succeeds</div>
+                <div class="section-title">Why Most Fail vs Why We Will Succeed</div>
                 <div class="comparison-grid">
                     <!-- 실패 원인 -->
                     <div class="failure-reasons">
@@ -713,7 +713,7 @@
 
                     <!-- KiiS 장점 -->
                     <div class="kiis-advantages">
-                        <div class="comparison-header">✅ KiiS Competitive Advantages</div>
+                        <div class="comparison-header">✅ Why KiiS Will Transform Lives</div>
                         <div class="data-source-section" onclick="alert('Evidence Sources: KiiS internal strategy documents, FDA Pre-Submission Q-Sub meeting minutes, OSU clinical study results, verified Fortune 500 employment history, Korean OEM audit reports, testing protocol completion (95%)')">ℹ️ Evidence Sources</div>
                         <ul class="comparison-list">
                             <li class="comparison-item">
@@ -765,14 +765,14 @@
 
             <!-- 투자 하이라이트 -->
             <div class="highlights-section">
-                <div class="section-title">4 Key Investment Highlights</div>
+                <div class="section-title">4 Reasons to Believe in KiiS</div>
                 <div class="highlights-grid">
                     <!-- 시장 기회 -->
                     <div class="highlight-card">
                         <span class="highlight-icon">🌍</span>
-                        <div class="highlight-title">Massive Market Opportunity</div>
+                        <div class="highlight-title">Their Last Hope, Our Greatest Opportunity</div>
                         <div class="highlight-content">
-                            Large addressable market with clear unmet need and proven patient demand for bone graft alternatives.
+                            178 million patients have been failed by inadequate solutions. They deserve one more chance—and we're it. This isn't just market size; it's moral urgency.
                         </div>
                         <div class="highlight-metrics">
                             <div class="metric">
@@ -784,8 +784,8 @@
                                 <div class="metric-label">Target Patients</div>
                             </div>
                             <div class="metric">
-                                <span class="metric-value">0.5%</span>
-                                <div class="metric-label">= $12M ARR</div>
+                                <span class="metric-value">ONE</span>
+                                <div class="metric-label">More Chance</div>
                             </div>
                         </div>
                     </div>
@@ -793,9 +793,9 @@
                     <!-- 검증된 기술 -->
                     <div class="highlight-card">
                         <span class="highlight-icon">🔬</span>
-                        <div class="highlight-title">Proven Technology & IP</div>
+                        <div class="highlight-title">This Time We Won't Fail Them</div>
                         <div class="highlight-content">
-                            US patented technology with FDA 510K pathway confirmed and testing materials ready for submission.
+                            While others built technology and hoped for markets, we listened to patients first. Our validated pathway means their wait ends here.
                         </div>
                         <div class="highlight-metrics">
                             <div class="metric">
@@ -816,9 +816,9 @@
                     <!-- 경험진 팀 -->
                     <div class="highlight-card">
                         <span class="highlight-icon">👥</span>
-                        <div class="highlight-title">Seasoned Leadership</div>
+                        <div class="highlight-title">The Team That Won't Give Up</div>
                         <div class="highlight-content">
-                            Global commercialization veterans from multinational corporations (J&J, P&G, Samsung) with extensive medical device market experience.
+                            We've seen patients suffer through inadequate treatments. This isn't just business expertise—it's personal mission. Failure is not an option.
                         </div>
                         <div class="highlight-metrics">
                             <div class="metric">
@@ -840,9 +840,9 @@
                     <!-- 수익성 경로 -->
                     <div class="highlight-card">
                         <span class="highlight-icon">📈</span>
-                        <div class="highlight-title">Clear Path to Profitability</div>
+                        <div class="highlight-title">Sustainable Success Model</div>
                         <div class="highlight-content">
-                            Structured phase-based execution roadmap with progressive revenue milestones and scalable digital-first business model.
+                            Every strategic decision we make serves two masters: patient outcomes and investor returns. Success means helping millions while building lasting value.
                         </div>
                         <div class="highlight-metrics">
                             <div class="metric">
