--- a/slide13.html
+++ b/slide13.html
@@ -666,10 +666,10 @@
 
             <!-- CTA 섹션 -->
             <div class="cta-section">
-                <div class="cta-title">많은 사람들의 삶을 바꾸는 이 여정을</div>
+                <div class="cta-title">Join Us in Transforming Lives</div>
                 <div class="cta-text">
-                    함께 동참할 파트너를 찾습니다.<br><br>
-                    이것은 단순한 투자 기회가 아닙니다. 178만 명의 환자들이 더 나은 치료를 받을 수 있도록 세상을 바꾸는 혁명에 동참하는 것입니다. 함께 의미 있는 변화를 만들어 가요.
+                    We're looking for partners to join this journey of changing many people's lives.<br><br>
+                    This isn't just an investment opportunity—it's a chance to be part of a mission that will fundamentally change how 1.78 million patients access better dental treatments. Together, we can build something meaningful.
                 </div>
                 <div class="cta-buttons">
                     <a href="mailto:invest@kiis.com" class="cta-button primary">
