--- a/slide13.html
+++ b/slide13.html
@@ -452,7 +452,7 @@
             display: flex;
             align-items: center;
             gap: 8px;
-            min-width: 80px;
+            min-width: 100px;
             justify-content: center;
         }
 
@@ -690,7 +690,7 @@
     <div class="hover-zone" id="hoverZone"></div>
     <div class="navigation" id="navigation">
         <a href="slide12.html" class="nav-btn prev">Back</a>
-        <a href="index.html" class="nav-btn next">Home</a>
+        <a href="index.html" class="nav-btn next">Finish Presentation</a>
     </div>
 
     <script>
