--- a/slide6.html
+++ b/slide6.html
@@ -824,13 +824,13 @@
                         <span class="solution-icon">⚡</span>
                         Process Simplification
                     </div>
-                    <img src="/kiis-investor-pitch/public/images/procedure-simplification.jpg" 
-                         alt="Procedure Simplification" 
+                    <img src="/kiis-investor-pitch/public/images/dental-team-efficiency.jpg" 
+                         alt="Dental Team Efficiency" 
                          class="solution-image"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="image-placeholder">
                         <div class="placeholder-icon">⚡</div>
-                        <div class="placeholder-text">Simplified<br>Procedure</div>
+                        <div class="placeholder-text">Dental Team<br>Efficiency</div>
                     </div>
                     <div class="solution-benefit">
                         <span class="benefit-highlight">Single session surgery</span> potential<br>
