--- a/slide5.html
+++ b/slide5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>KiiS - Clinical Evidence Drives Market Success</title>
+    <title>KiiS - Science Behind Drives Market Success</title>
     <style>
         * {
             margin: 0;
