--- a/slide7.html
+++ b/slide7.html
@@ -625,8 +625,8 @@
                         <div class="key-point-text"><strong>FDA 510K pathway</strong> - proven safety</div>
                     </div>
                     <div class="key-point">
-                        <div class="key-point-icon">🎯</div>
-                        <div class="key-point-text"><strong>Mid-Premium positioning</strong> - Enhanced affordability</div>
+                        <div class="key-point-icon">🏢</div>
+                        <div class="key-point-text"><strong>60%+ premium market</strong> - Straumann, Nobel dominance</div>
                     </div>
                 </div>
             </div>
